--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,6 +62,7 @@
     "query-string": "^7.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "trustdidweb-ts": "^0.0.4",
     "tsyringe": "^4.8.0",
     "uuid": "^9.0.0",
     "varint": "^6.0.0",
