chore(webvh): update dependencies and configuration for improved compatibility
- Updated 'didwebvh-ts' version to ^2.2.0 in package.json.

Signed-off-by: Brian Richter <brian@aviary.tech>

--- a/packages/webvh/package.json
+++ b/packages/webvh/package.json
@@ -27,7 +27,7 @@
     "@multiformats/base-x": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.1",
-    "didwebvh-ts": "file:/Users/brian/Projects/bcgov/didwebvh-ts",
+    "didwebvh-ts": "^2.2.0",
     "json-canonicalize": "^1.0.6",
     "tsyringe": "^4.8.0"
   },
